--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@
 body {
   height: 100vh;
   overflow: hidden;
-  background-color : var(--c-light);
+  background-color : var(--js-light);
   background-image: url("../imgs/start-bg.png");
   background-size: cover;
   display: flex;
